Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-18823

QGLSceneNode::CullBoundingBox option culls too much

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt3D TP2
    • 4.7.2
    • Qt3D
    • None
    • Windows XP SP3, msvc2008
    • e248a12d6ac0e756e6ebab610fb6cf5433d725bc 173cee8f45c51ce81a13117ce1383bfd93932ea1

      Hi,

      QGLSceneNode::CullBoundingBox culls too much even if a part of the node geometry is visible in the scene. Try to run Builder example and rotate the scene, some cans will disappear.

      This kind of hard culling can occur in a middle of a viewport (using ortho camera and some GLSceneNode but I guess it doesn't depend on camera mode).

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sarasmit Sarah Smith (closed Nokia identity) (Inactive)
            sylv Sylv
            Votes:
            2 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes